[tool.poetry]
name = "esngeteh"
version = "1.2"
description = "A simple python based code traversal engine built with AST"
authors = ["Whisnu Sanjaya <whisnusanjaya8@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/whisnusanjaya/esngeteh"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools"
]
build-backend = "poetry.core.masonry.api"
